--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scroll": "^1.9.0",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+       "vite": "^4.0.0"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
