--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scroll": "^1.9.0",
-    "swiper": "^11.1.15",
-    "vite": "^4.0.0"
+    "swiper": "^11.1.15"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
